--- a/style.css
+++ b/style.css
@@ -4543,7 +4543,12 @@ a.to-the-top > * {
 
 	/* ALIGNMENT CLASSES */
 
-	.entry-content > .alignleft,
+	.entry-content > .alignleft {
+
+		/*rtl:ignore*/
+		margin-left: 4rem;
+	}
+
 	.entry-content > p .alignleft,
 	.entry-content > .wp-block-image .alignleft,
 	[class*="wp-block"].alignwide [class*="__inner-container"] > .alignleft,
@@ -4565,7 +4570,12 @@ a.to-the-top > * {
 		margin-left: 0;
 	}
 
-	.entry-content > .alignright,
+	.entry-content > .alignright {
+
+		/*rtl:ignore*/
+		margin-right: 4rem;
+	}
+
 	.entry-content > p .alignright,
 	.entry-content > .wp-block-image .alignright,
 	[class*="wp-block"].alignwide [class*="__inner-container"] > .alignright,
@@ -5748,6 +5758,8 @@ a.to-the-top > * {
 	.entry-content > p .alignleft,
 	.entry-content > .wp-block-image .alignleft {
 		position: absolute;
+
+		/*rtl:ignore*/
 		right: calc((100vw - 58rem) / 2 + 58rem);
 		max-width: calc((100% - 58rem) / 2 - 4rem);
 	}
@@ -5756,6 +5768,8 @@ a.to-the-top > * {
 	[class*="wp-block"]:not(.alignwide):not(.alignfull) [class*="__inner-container"] > p .alignleft,
 	[class*="wp-block"]:not(.alignwide):not(.alignfull) [class*="__inner-container"] > .wp-block-image .alignleft {
 		position: relative;
+
+		/*rtl:ignore*/
 		right: inherit;
 		max-width: inherit;
 	}
@@ -5767,6 +5781,8 @@ a.to-the-top > * {
 	[class*="wp-block"].alignfull [class*="__inner-container"] > p .alignleft,
 	[class*="wp-block"].alignfull [class*="__inner-container"] > .wp-block-image .alignleft {
 		position: absolute;
+
+		/*rtl:ignore*/
 		right: calc((100% - 58rem) / 2 + 58rem);
 		max-width: calc((100% - 58rem) / 2 - 4rem);
 	}
@@ -5776,6 +5792,8 @@ a.to-the-top > * {
 	.entry-content > .wp-block-image .alignright,
 	[class*="__inner-container"] > .alignright {
 		position: absolute;
+
+		/*rtl:ignore*/
 		left: calc((100vw - 58rem) / 2 + 58rem);
 		max-width: calc((100% - 58rem) / 2 - 4rem);
 	}
@@ -5784,6 +5802,8 @@ a.to-the-top > * {
 	[class*="wp-block"]:not(.alignwide):not(.alignfull) [class*="__inner-container"] > p .alignright,
 	[class*="wp-block"]:not(.alignwide):not(.alignfull) [class*="__inner-container"] > .wp-block-image .alignright {
 		position: relative;
+
+		/*rtl:ignore*/
 		left: inherit;
 		max-width: inherit;
 	}
@@ -5795,6 +5815,8 @@ a.to-the-top > * {
 	[class*="wp-block"].alignfull [class*="__inner-container"] > p .alignright,
 	[class*="wp-block"].alignfull [class*="__inner-container"] > .wp-block-image .alignright {
 		position: absolute;
+
+		/*rtl:ignore*/
 		left: calc((100% - 58rem) / 2 + 58rem);
 		max-width: calc((100% - 58rem) / 2 - 4rem);
 	}
@@ -6102,6 +6124,7 @@ a.to-the-top > * {
 
 		/*rtl:ignore*/
 		margin-left: -31rem;
+		max-width: 29rem;
 	}
 
 	.entry-content > .alignright,
@@ -6110,6 +6133,7 @@ a.to-the-top > * {
 
 		/*rtl:ignore*/
 		margin-right: -31rem;
+		max-width: 29rem;
 	}
 
 	.entry-content > .alignwide {
